--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html class="no-js" lang="en">
 <head>
 
-    <!--- basic page needs
-    ================================================== -->
     <meta charset="utf-8">
-    <title>Count - Static</title>
+    <title>Growthorganisation</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- mobile specific metas
-    ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS
@@ -50,7 +46,7 @@
             <div class="row home-content__main">
 
                 <div class="col-eight home-content__text pull-right">
-                    <h3>Welcome to Count</h3>
+                    <h3>Welcome to Growth</h3>
 
                     <h1>
                     We are currently working <br>
@@ -58,9 +54,7 @@
                     </h1>
 
                     <p>
-                    Nulla porttitor accumsan tincidunt. Nulla quis lorem ut libero malesuada feugiat. 
-                    Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. 
-                    Pellentesque in ipsum id orci porta dapibus. Nulla quis lorem ut libero malesuada feugiat.
+                            Growth Organisation (Home Schooling). be the first to apply and win prices
                     </p>
 
                     <div class="home-content__subscribe">
@@ -118,8 +112,8 @@
             </ul> <!-- end home-social -->
 
             <div class="row home-copyright">
-                <span>Copyright Count 2018</span> 
-                <span>Design by <a href="https://www.styleshout.com/">styleshout</a></span>
+                <span>Copyright Count 2023</span> 
+                <span>Design by <a href="NdiphiweQumba.github.io/website>styleshout</a></span>
             </div> <!-- end home-copyright -->
 
             <div class="home-content__line"></div>
@@ -139,7 +133,7 @@
         <div class="row info-wrapper">
 
             <div class="col-seven tab-full info-main">
-                <h1>We are Count. We make awesome stuff.</h1>
+                <h1>We are Growth. Home Scholling.</h1>
                 <p>
                 Quisque velit nisi, pretium ut lacinia in, elementum id enim. Mauris blandit aliquet elit, 
                 eget tincidunt nibh pulvinar a. Quisque velit nisi, pretium ut lacinia in, elementum id enim. 
@@ -160,8 +154,9 @@
                 <div class="info-block">
                     <h3>Start A Conversation</h3>
                     <p>
-                        <a href="mailto:#0" class="info-email">mailus@ourwebsite.com</a><br>
-                        <a href="tel:+18587338912" class="'info-phone">+1.858.733.8912</a>
+                        <a href="mailto:#0" class="info-email">info@Growthorganisation.co.za><br>
+                        <a href="tel:+18587338912" class="'info-phone">+27 71 496 1648
+                        </a>
                     </p>
                 </div>
 
@@ -169,9 +164,9 @@
                     <h3>Visit Our Office</h3>
                     
                     <p class="info-address">
-                        1600 Amphitheatre Parkway<br>
-                        Mountain View, CA<br>
-                        94043 US
+                        420 Leyds St.<br>
+                        Sunny Side<br>
+                        0001 Pretoria
                     </p>
                 </div>
 
