--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                 <div class="info-block">
                     <h3>Start A Conversation</h3>
                     <p>
-                        <a href="mailto:#0" class="info-email">info@Growthorganisation.co.za><br>
-                        <a href="tel:+18587338912" class="'info-phone">+27 71 496 1648
+                        <a href="mailto:#0" class="info-email">Developer@Growthorganisation.co.za><br>
+                        <a href="tel:+27714961648" class="'info-phone">+27 71 496 1648
                         </a>
                     </p>
                 </div>
