--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
                     <div class="home-content__subscribe">
                         <form id="mc-form" class="group" novalidate="true">
-                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
-                            <input type="submit" name="subscribe" value="Notify Me">
+                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required>
+                            <input name="subscribe"><a href="mailto:Developer@Growthorganisation.co.za">Notify Me</a></input>
                             <label for="mc-email" class="subscribe-message"></label>
                         </form>
                     </div>
@@ -113,7 +113,7 @@
 
             <div class="row home-copyright">
                 <span>Copyright Count 2023</span> 
-                <span>Design by <a href="NdiphiweQumba.github.io/website>styleshout</a></span>
+                <span>Design by <a href="NdiphiweQumba.github.io/website>styleshout</a>@Ndiphiwe</span>
             </div> <!-- end home-copyright -->
 
             <div class="home-content__line"></div>
@@ -154,7 +154,7 @@
                 <div class="info-block">
                     <h3>Start A Conversation</h3>
                     <p>
-                        <a href="mailto:#0" class="info-email">Developer@Growthorganisation.co.za><br>
+                        <a href="mailto:Developer@Growthorganisation.co.za" class="info-email">Developer@Growthorganisation.co.za><br>
                         <a href="tel:+27714961648" class="'info-phone">+27 71 496 1648
                         </a>
                     </p>
