--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="home-content__subscribe">
                         <form id="mc-form" class="group" novalidate="true">
                             <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required>
-                            <input name="subscribe"><a href="mailto:Developer@Growthorganisation.co.za">Notify Me</a></input>
+                            <input type="submit" value="Notify Me" name="subscribe"><a href="mailto:Developer@Growthorganisation.co.za">Notify Me</a></input>
                             <label for="mc-email" class="subscribe-message"></label>
                         </form>
                     </div>
