--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
                     <div class="home-content__subscribe">
                         <form id="mc-form" class="group" novalidate="true">
-                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required>
-                            <input type="submit" value="Notify Me" name="subscribe"><a href="mailto:Developer@Growthorganisation.co.za">Notify Me</a></input>
+                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
+                            <input type="submit" name="subscribe" value="Notify Me">
                             <label for="mc-email" class="subscribe-message"></label>
                         </form>
                     </div>
