--- a/index.html
+++ b/index.html
@@ -135,17 +135,11 @@
             <div class="col-seven tab-full info-main">
                 <h1>We are Growth. Home Scholling.</h1>
                 <p>
-                Quisque velit nisi, pretium ut lacinia in, elementum id enim. Mauris blandit aliquet elit, 
-                eget tincidunt nibh pulvinar a. Quisque velit nisi, pretium ut lacinia in, elementum id enim. 
-                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; 
-                Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
+                    We are so exited to announce the Launching of the Website, for Hand-picked problems and solutions to speed up your rating improvement.
                 </p>
 
                 <p>
-                Officiis nostrum adipisci minima. Enim tenetur animi ipsum a itaque temporibus necessitatibus. 
-                Dolores ad perspiciatis. Voluptatem et molestiae adipisci laboriosam assumenda. Deleniti vero 
-                labore eos repudiandae. Vel commodi tenetur ex quia. Quisque velit nisi, pretium ut lacinia in, 
-                elementum id enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere.
+                   we will  also be We taking note of every achievment in progress and reward out enrollees with amazing prices.
                 </p>
             </div>
 
