--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
             <div class="home-logo">
                 <a href="index-static.html">
-                    <img src="images/logo.svg" alt="Homepage">
+                    <h5>Count Down</h5>
+                    <img src=" alt="Homepage">
                 </a>
             </div>
 
