--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </h1>
 
                     <p>
-                            Growth Organisation (Home Schooling). be the first to apply and win prices
+                            Growth Organisation (Home Schooling). Be the first to apply and win prizes
                     </p>
 
                     <div class="home-content__subscribe">
@@ -133,13 +133,13 @@
         <div class="row info-wrapper">
 
             <div class="col-seven tab-full info-main">
-                <h1>We are Growth. Home Scholling.</h1>
+                <h1>We are Growth. Home Scholing.</h1>
                 <p>
-                    We are so exited to announce the Launching of the Website, for Hand-picked problems and solutions to speed up your rating improvement.
+                    We are so exited to announce the launching of the Website, for Hand-picked problems and solutions to speed up your ratings.
                 </p>
 
                 <p>
-                   we will  also be We taking note of every achievment in progress and reward out enrollees with amazing prices.
+                   We will  also bebe taking note of every achievment in progress and reward out enrollees with amazing prizes
                 </p>
             </div>
 
