--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </p>
 
                 <p>
-                   We will  also be taking note of every achievment in progress and reward out enrollees with amazing prizes
+                   We will  also be taking note of every achievement in progress and reward out enrollees with amazing prizes
                 </p>
             </div>
 
