--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="col-seven tab-full info-main">
                 <h1>We are Growth. Home Scholing.</h1>
                 <p>
-                    We are so excited to announce the launching of the Website, for Hand-picked problems and solutions to speed up your ratings.
+                    We are so excited to announce the launching of the Website, for Hand-picked problems and solutions to speed up your learning and improve ratings.
                 </p>
 
                 <p>
