--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="info-block">
                     <h3>Start A Conversation</h3>
                     <p>
-                        <a href="mailto:Developer@Growthorganisation.co.za" class="info-email">Developer@Growthorganisation.co.za><br>
+                        <a href="mailto:Developer@Growthorganisation.co.za" class="info-email">Developer@Growthorganisation.co.za<br>
                         <a href="tel:+27714961648" class="'info-phone">+27 71 496 1648
                         </a>
                     </p>
